# original-monGARS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.arm64.yaml  compose.ci-smoke.yaml  compose.dev.yaml  compose.inference-test.yaml  compose.jetson.yaml  compose.override.yaml  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  supply-chain.yml
apps/mobile/: .env.example  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
backups/: mongars-20260723T024021Z.dump  mongars-before-0005-20260723T035919Z.dump
deploy/caddy/: Caddyfile  Dockerfile  check.sh
deploy/egress-proxy/: README.md  check.sh  squid.conf
deploy/searxng/: README.md  check.sh  proxy_probe.py  settings.yml
docs/: adaptation-api.md  personality-lifecycle.md
docs/adr/: 0001-advisory-cognitive-context.md  0002-explicit-feedback-proposals.md  0003-personality-persistence.md  0004-p2p-knowledge-exchange.md  0004-personality-feedback-runtime.md  0005-mains-virtuelles-executor-trust-model.md  0005-personality-lifecycle.md  0006-model-governance-activation-and-rollback.md  0007-voice-first-privacy-and-state.md  0008-biological-term-mapping-and-service-ownership.md  0009-bouche-autobiographical-memory-core.md  0010-cortex-bouche-typed-chat.md  0011-bouche-ndjson-streaming.md  0011-ndjson-chat-streaming.md  0012-typed-feedback-mimicry.md
docs/notes/: 2026-07-23-deployment-runbook-validation.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_runtime_consistency.py  0003_document_staging.py  0004_embedding_provenance_runtime.py  0005_personality_profiles.py  0006_model_governance.py  0006_personality_lifecycle.py  0007_autobiographical_memory.py
scripts/: benchmark_memory_search.py  check_deployment_contract.py  ci-local.sh  ci_runtime_mock.py  deployment_smoke.sh  https_chat_stream_smoke.py  mongars-status.sh  reset-deployment.sh  rotate-credentials.sh  runtime_smoke.py
src/mongars/: __init__.py  config.py  http.py  ids.py  logging.py  main.py  prompting.py  runtime.py  (+1 more)
(+218 files in other folders)
